--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,33 +1,64 @@
+*{
+  box-sizing: border-box;
+  padding: 0 ;
+  margin:0;
+  max-width:100%;
+  border: 1px solid grey;
+}
+
 .App {
-  text-align: center;
+  background-image: url(https://images.unsplash.com/photo-1506404523803-9f9fa45e066e?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjI0MX0&auto=format&fit=crop&w=1350&q=80);
+  background-position: center; 
+  background-repeat: no-repeat; 
+  background-size: cover;
+  height: 100vh;
+  width: 100vw;
 }
 
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 40vmin;
-  pointer-events: none;
+.App p {
+  color: #fff;
+  padding: 2rem;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.photo-header {
+  width: 100%;
   display: flex;
-  flex-direction: column;
+  justify-content: space-between;
   align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
 }
 
-.App-link {
-  color: #61dafb;
+.photo-title{
+  font-size: 2rem;
+  padding: 2rem;
+  color: #fff;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.navbar {
+  width: 50%;
+}
+.nav-list{
+  display: flex;
+  flex-direction: row;
+  padding: 2rem;
+  justify-content: space-around;
+}
+
+.link {
+  list-style-type: none;
+}
+
+.link a{
+  text-decoration: none;
+  color: #fff;
+}
+
+.photo-box {
+  height: 100vh;
+  width: 100vw;
+}
+
+.photo-box {
+  z-index: -1;
+  height: 100vh;
+  width: 100vw;
 }
