--- a/client/src/App.css
+++ b/client/src/App.css
@@ -7,12 +7,11 @@
 }
 
 .App {
-  background-image: url(https://images.unsplash.com/photo-1506404523803-9f9fa45e066e?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjI0MX0&auto=format&fit=crop&w=1350&q=80);
-  background-position: center; 
-  background-repeat: no-repeat; 
-  background-size: cover;
-  height: 100vh;
-  width: 100vw;
+  background: url(https://images.unsplash.com/photo-1506404523803-9f9fa45e066e?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjI0MX0&auto=format&fit=crop&w=1350&q=80) repeat center center/cover;
+  /* background-position: center; 
+  background-repeat: repeat; 
+  background-size: cover; */
+  
 }
 
 .App p {
