--- a/client/src/App.css
+++ b/client/src/App.css
@@ -3,15 +3,13 @@
   padding: 0 ;
   margin:0;
   max-width:100%;
+  font-family: 'Lato', sans-serif;
   /* border: 1px solid grey; */
 }
 
 .App {
   background: url(https://images.unsplash.com/photo-1506404523803-9f9fa45e066e?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjI0MX0&auto=format&fit=crop&w=1350&q=80) repeat center center/cover;
-  /* background-position: center; 
-  background-repeat: repeat; 
-  background-size: cover; */
-  
+  height: 100vh;
 }
 
 .App p {
@@ -30,6 +28,8 @@
   font-size: 2rem;
   padding: 2rem;
   color: #fff;
+  font-size: 2rem;
+  font-weight: bold;
 }
 
 .navbar {
@@ -44,6 +44,8 @@
 
 .link {
   list-style-type: none;
+  font-size: 1rem;
+  font-weight: bold;
 }
 
 .link a{
@@ -60,4 +62,24 @@
   z-index: -1;
   height: 100vh;
   width: 100vw;
+}
+
+.form-box {
+  display: flex;
+  justify-content: center;
+  /* border: 1px solid pink; */
+}
+
+.nasa-input {
+  border-radius: 5px;
+  margin-left: 100px;
+  font-size: 1.8rem;
+  padding-left: 10px;
+}
+
+.nasa-button {
+  margin-left: 100px;
+  font-size: 1.8rem;
+  border-radius: 5px;
+  padding: 10px;
 }
